--- a/src/Enza_DEG_analysis.Rmd
+++ b/src/Enza_DEG_analysis.Rmd
@@ -36,6 +36,7 @@ cf <- na.omit(cf)#Omit samples without WGS data
 
 cf$AR <- ifelse(cf$AR == 3, "Gain", "WT")
 
+cf$AR %>% table()
 
 ```
 
@@ -112,12 +113,10 @@ bulk_deg <- topTable(efit, number = Inf, coef = 1) %>% data.frame(Genes = row.na
 bulk_deg <- bulk_deg %>% dplyr::filter(adj.P.Val < 0.25 & abs(logFC) > 1) %>% left_join( y = final_markers, by = c("Genes" = "gene"))
 
 
-bulk_deg <- bulk_deg %>% dplyr::filter(adj.P.Val < 0.25 & abs(logFC) > 1) %>% left_join( y = pcg_markers, by = c("Genes" = "gene"))
+#bulk_deg <- bulk_deg %>% dplyr::filter(adj.P.Val < 0.25 & abs(logFC) > 1) %>% left_join( y = pcg_markers, by = c("Genes" = "gene"))
 
-ar_lncrna <- bulk_deg %>% dplyr::filter(logFC > 0 & cluster == 'tumor') %>% .$Genes
+ar_lncrna <- bulk_deg %>% dplyr::filter( (logFC >0) & cluster == 'tumor') %>% .$Genes
 
-bulk_deg %>% dplyr::filter(logFC > 0 & Genes %in% linc$gene.name)
-ar_lncrna
 ```
 
 ```{r}
@@ -127,7 +126,7 @@ bulk_deg$cluster <- bulk_deg$cluster %>% as.character()
 bulk_deg <- bulk_deg %>% mutate(Cluster = ifelse(is.na(cluster), "Unknown", cluster)) %>% mutate(Alpha = ifelse(Cluster == "Unknown", 0.8, 1))
 
 
-plot <- ggplot(bulk_deg, aes(x = logFC, y = -log10(adj.P.Val), color = Cluster, alpha = Alpha, label = Genes) ) + geom_point() + scale_color_manual(values = c("purple", "orange", "red", "pink", "darkgreen","navy" , "black")) + geom_hline(yintercept = -log10(0.25), linetype= 'dashed') + geom_vline(xintercept = c(-1,1), linetype = 'dashed') + geom_text_repel(data = dplyr::filter(bulk_deg, abs(logFC) > 1 &adj.P.Val < 0.25 ), force = 0.8, size = 2.5) + ggtitle(label = "Protein-coding genes associated with AR gain") + theme_classic()
+plot <- ggplot(bulk_deg, aes(x = logFC, y = -log10(adj.P.Val), color = Cluster, alpha = Alpha, label = Genes) ) + geom_point() + scale_color_manual(values = c("purple", "orange", "red", "black", "navy","grey" , "navy")) + geom_hline(yintercept = -log10(0.25), linetype= 'dashed') + geom_vline(xintercept = c(-1,1), linetype = 'dashed') + geom_text_repel(data = dplyr::filter(bulk_deg, abs(logFC) > 1 &adj.P.Val < 0.25 & Cluster !="Unknown" ), force = 0.8, size = 2.5) + ggtitle(label = "lncRNAs associated with AR gain") + theme_classic()
 
 plot
 
@@ -148,6 +147,33 @@ colnames(lcm)[1] <- "Gene"
 
 meta <- read_csv(file = "/Users/ds/Desktop/projects/data/anno/LCM_enza_WCDT_meta.csv", col_names = c("Patient.ID", "Timepoint", "Biopsy.site", "Same.lesion", "PSA", "TOS", "AR.VIPER", "AR.GEX", "Aggarwal", "Labrecque" ))
 
+
+a <- data.frame(lcm) %>% dplyr::filter(Gene %in% c(ar_lncrna)) 
+row.names(a) <- a$Gene
+
+a <- a %>% dplyr::select(-Gene) %>% log1p() 
+
+df <- data.frame(Patient.ID = colnames(a), t(a)) %>% merge(meta)
+row.names(df) <- df$Patient.ID
+df$AR.GEX <- as.numeric(df$AR.GEX)
+df$AR.VIPER <- as.numeric(df$AR.VIPER)
+
+df$Sample <- gsub(pattern = "DTB|_[0-9]*", replacement = "", x = df$Patient.ID)
+
+
+row_ha = HeatmapAnnotation( PSA = df$PSA, AR.GEX = df$AR.GEX, AR.VIPER = df$AR.VIPER, Aggarwal.cluster = df$Aggarwal, Labrecque.cluster = df$Labrecque, Sample = df$Sample)
+
+
+mat <- df[,colnames(df) %in% ar_lncrna] %>% scale() %>% t()
+
+
+mat <- ramify::clip(mat, .min = -2, .max = 2)
+pdf("/Users/ds/Desktop/plot.pdf", height = 10, width = 10)
+Heatmap(matrix = mat, show_column_names = F, col  = colorRampPalette(c('navy',"white", "red"))(10), top_annotation  = row_ha, cluster_columns = T, name = "Z score", column_names_gp = gpar(fontsize = 10), height = unit(5, 'cm'), cluster_rows = F)
+dev.off()
+
+
+
 lcm <- data.frame(lcm)
 
 lcm <- lcm[!duplicated(lcm$Gene),]
@@ -157,6 +183,7 @@ lcm <- as.matrix(lcm) %>% log1p()
 
 
 gsva.es <- gsva(lcm, gset.idx.list = list(ar_lncrna), method = 'zscore')
+
 
 
 
@@ -184,7 +211,7 @@ df$AR.VIPER <- as.numeric(df$AR.VIPER)
 # Create a box plot
 p1 <- ggboxplot(
   dplyr::filter(df, PSA != "Unknown"), x = "Timepoint", y = "Pca.lncrna", fill = "darkred", alpha = 0.5,
-  facet.by = "PSA", draw_quantiles = 0.5, add = 'jitter')+ stat_compare_means(paired = T, method = 't.test', label.x.npc = 0.5) + ylab("AR upregulated Pca-protein coding genes")
+  facet.by = "PSA", draw_quantiles = 0.5, add = 'jitter')+ stat_compare_means(paired = T, method = 't.test', label.x.npc = 0.5) + ylab("AR regulated Pca-protein coding genes")
 
 p1
 
@@ -205,87 +232,11 @@ dev.off()
 ```
 
 
-```{r}
-
-a <- data.frame(lcm) %>% dplyr::filter(Gene %in% c(ar_lncrna)) 
-row.names(a) <- a$Gene
-
-a <- a %>% dplyr::select(-Gene) %>% log1p() 
-
-df <- data.frame(Patient.ID = colnames(a), t(a)) %>% merge(meta)
-row.names(df) <- df$Patient.ID
-df$AR.GEX <- as.numeric(df$AR.GEX)
-df$AR.VIPER <- as.numeric(df$AR.VIPER)
-
-df$Sample <- gsub(pattern = "DTB|_[0-9]*", replacement = "", x = df$Patient.ID)
-
-
-row_ha = HeatmapAnnotation( PSA = df$PSA, AR.GEX = df$AR.GEX, AR.VIPER = df$AR.VIPER, Aggarwal.cluster = df$Aggarwal, Labrecque.cluster = df$Labrecque, Sample = df$Sample)
-
-
-mat <- df[,colnames(df) %in% ar_lncrna] %>% scale() %>% t()
-
-
-mat <- ramify::clip(mat, .min = -2, .max = 2)
-pdf("/Users/ds/Desktop/plot.pdf", height = 10, width = 10)
-Heatmap(matrix = mat, show_column_names = F, col  = colorRampPalette(c('navy',"white", "red"))(10), top_annotation  = row_ha, cluster_columns = T, name = "Z score", column_names_gp = gpar(fontsize = 10), height = unit(5, 'cm'), cluster_rows = F)
-dev.off()
-
-
-```
 
 
 ```{r}
-p1 <- dplyr::filter(df,grepl(pattern ="DTB_080|DTB_135|DTB_210", x = Patient.ID)) %>% mutate(Group = "Converters") %>% ggboxplot( , x = "Timepoint", y = "AR.VIPER", fill = "darkblue", alpha = 0.5, draw_quantiles = 0.5,add = "jitter" , facet.by = "Group", width = 0.5) + stat_compare_means(paired = T, method = 't.test', label.x.npc = 0.5) + ylab("AR upregulated Pca-lncRNAs")
+p1 <- dplyr::filter(df,grepl(pattern ="DTB_080|DTB_135|DTB_210", x = Patient.ID)) %>% mutate(Group = "Converters") %>% ggboxplot( , x = "Timepoint", y = "AR.VIPER", fill = "darkblue", alpha = 0.5, draw_quantiles = 0.5,add = "jitter" , facet.by = "Group", width = 0.5) + stat_compare_means(paired = T, method = 't.test', label.x.npc = 0.5) + ylab("AR VIPER score")
 p1
-
-```
-
-```{r}
-
-
-mcrpc_rna <- read.table(file = "/Users/ds/Desktop/projects/data/rna/mCRPC_RNA_counts_genename.txt", header = T)
-mcrpc_rna <- mcrpc_rna[!duplicated(mcrpc_rna$Genename),]
-
-
-
-
-row.names(mcrpc_rna) <- mcrpc_rna$Genename
-mcrpc_rna <- mcrpc_rna[,-1]
-keep.exprs <- filterByExpr(as.matrix(mcrpc_rna),min.count = 5 )
-
-
-
-
-mcrpc_rna <- mcrpc_rna[keep.exprs,]
-mcrpc_rna <- edgeR::cpm(mcrpc_rna, log = T) %>% t() %>% data.frame()#Log normalize for heatmap
-#mcrpc_rna <- mcrpc_rna %>% t() %>% data.frame()#Counts for DEG analysis
-row.names(mcrpc_rna) <- gsub("\\.", "-",  x = row.names(mcrpc_rna))
-mcrpc_rna <- mcrpc_rna %>% mutate(cases = row.names(.), batch = "mCRPC")
-
-
-
-anno <- read.table("/Users/ds/Desktop/projects/data/anno/202009_deepRNAseq_sample_full.txt", header =T)
-
-
-
-anno <- anno %>% dplyr::select(c(sample_id, wgs_id, biopsy_site, disease_type_SIG_GEX, ID_patient,tumor_purity_rna, AR ))
-```
-
-```{r}
-
-
-Pca.lncrna <- mcrpc_rna[, colnames(mcrpc_rna) %in% c(pca_lncrna)] %>% rowMeans()
-Androgen.Response.Hallmark <- mcrpc_rna[, colnames(mcrpc_rna) %in% dplyr::filter(gs, gs_name == "HALLMARK_ANDROGEN_RESPONSE")$gene_symbol] %>% rowMeans()
-
-df <- data.frame(sample_id = names(Pca.lncrna), Androgen.Response.Hallmark = Androgen.Response.Hallmark, Pca.lncrna = Pca.lncrna) %>% merge(anno) 
-
-df <- df %>% mutate(AR = ifelse(AR == 3, "Gain", "WT"))
-
-df
-
-p <- na.omit(df) %>% ggboxplot( x = "AR", y = "Pca.lncrna", fill = "darkblue", alpha = 0.5, draw_quantiles = 0.5,add = "jitter" , width = 0.5) + stat_compare_means(paired = F, method = 't.test', label.x.npc = 0.5) + ylab("Prostate lncRNAs") + xlab("AR mutational status")
-
-p
+ar_lncrna
 ```
 
