--- a/src/Figure.5/RB1_DEG_analysis.Rmd
+++ b/src/Figure.5/RB1_DEG_analysis.Rmd
@@ -1,13 +1,14 @@
 ---
-title: "R Notebook"
+title: "DE lncRNAs assoicated with RB1 bi-allelic deletions - Figure 5"
 output: html_notebook
 ---
 
+#LOAD LIBRARIES
 ```{r}
 library(rstatix)
 library(ggpubr)
 library(tidyverse)
-library(rsample)   # for resampling procedures
+library(rsample)  
 library(caret)
 library(ggpubr)
 library(survival)
@@ -18,55 +19,37 @@ library(vip)
 library(ggfortify)
 ```
 
+
+#READ IN METADATA FOR RNA-SEQ
 ```{r}
+#Meta data for Deep RNA-seq
 anno <- read.table("/Users/ds/Desktop/projects/data/anno/202009_deepRNAseq_sample_full.txt", header =T)
-
-
-
 anno <- anno %>% dplyr::select(c(sample_id, wgs_id, biopsy_site, disease_type_SIG_GEX, ID_patient, RB1,tumor_purity_rna)) 
-cf <- read.table("/Users/ds/Desktop/projects/BME_analysis/results/CIBERSORTx_Job33_Adjusted.txt", sep = "\t", header = T)
+cf <- read.table("/Users/ds/Desktop/projects/mCRPC_lncRNA_analysis/data/CIBERSORTx_Job33_Adjusted.txt", sep = "\t", header = T)
 cf$sample_id <- gsub("\\.", "-", cf$Mixture)
 row.names(cf) <- cf$Mixture
-
 cf <- inner_join(x = cf, y = anno, by  = c("sample_id" = "sample_id"))
-
-
-
 row.names(cf) <- cf$sample_id
-
-
-cf <- na.omit(cf)#Omit samples without WGS data
-
+#Omit samples without WGS data
+cf <- na.omit(cf)
+#Format samples with RB1 bi-allelic deletions v.s monoallelic/WT
 cf$RB1 <- ifelse(cf$RB1 == 0, "Del", "WT.Mono")
 
-cf$RB1 %>% table()
 ```
 
-
+#EDGER DIFFERENTIAL GENE EXPRESSION ANALYSIS OF LNCRNAS AND RB1 STATUS
 ```{r}
-#Limma DE analysis 
-
-
 #Read in raw counts, convert to matrix with rows as gene symbols, columns as samples
 counts <- read.table("/Users/ds/Desktop/projects/data/rna/mCRPC_RNA_counts_genename.txt", header = T)
-
-
-
-
 counts <- counts[!duplicated(counts$Genename),]
 row.names(counts) <- counts$Genename
 counts <- counts[,-1] %>% as.matrix()
 colnames(counts) <- gsub("\\.", "-", colnames(counts))  
 
-#counts <- counts[row.names(counts) %in% linc$gene.name,]#Subset lncrna in hg38 
-
-
 #Keep matching sample ids of RNA-seq and WGS for cmp annotation
 ids <- intersect(colnames(counts),row.names(cf))
 counts <- counts[,ids]
 cf <- cf[ids,]
-
-
 
 #Create dge object - create counts matrix and sample anno df with library sizes
 x <- DGEList(counts = counts)
@@ -81,19 +64,13 @@ x <- x[keep.exprs,, keep.lib.size = F]
 #Calculate effective library size using EdgeR TMM method
 x <- calcNormFactors(x, method = "TMM")
 
-#x <- x[row.names(x) %in% linc$gene.name,]#Subset lncrna in hg38 
-
-#x <- x[row.names(x) %in% pcg$gene.name,]#Subset pcg in hg38
-
-#Create design matrix (w/o intercept) specifying group membership
+#Create design matrix (w/o intercept) specifying group membership - tumor purity as covariate
 design <- model.matrix(~ 0 + RB1 + tumor_purity_rna, data = cf) 
 
-design
 colnames(design) <- c("Del", "WT.Mono", "Purity") 
 
 # #Create contrasts to calculate
 contr.matrix <- makeContrasts(Del - WT.Mono, levels = colnames(design))
-
 
 #Normalize counts to log CPM using voom
 v <- voom(x, design = design)
@@ -108,19 +85,12 @@ vfit <- contrasts.fit(vfit, contrasts=contr.matrix)
 efit <- eBayes(vfit)
 
 
-#Get list of all genes, arrange in decreasing order
-bulk_deg <- topTable(efit, number = Inf, coef = 1) %>% data.frame(Genes = row.names(.))  %>% arrange(-logFC) 
-
-
-
+#Get list of all genes, arrange in decreasing order - FDR 10% , abs logFC > 1, merge with lncRNA markers
+bulk_deg <- topTable(efit, number = Inf, coef = 1) %>% data.frame(Genes = row.names(.))  %>% arrange(-logFC)
 bulk_deg <- bulk_deg %>% dplyr::filter(adj.P.Val < 0.1 & abs(logFC) > 1) %>% left_join( y = final_markers, by = c("Genes" = "gene"))
+# bulk_deg <- bulk_deg %>% dplyr::filter(adj.P.Val < 0.1 & abs(logFC) > 1) %>% left_join( y = pcg_markers, by = c("Genes" = "gene"))
 
-
- 
-bulk_deg <- bulk_deg %>% dplyr::filter(adj.P.Val < 0.1 & abs(logFC) > 1) %>% left_join( y = pcg_markers, by = c("Genes" = "gene"))
-
-bulk_deg
-
+#Format deg list
 bulk_deg$cluster <- bulk_deg$cluster %>% as.character()
 bulk_deg <- bulk_deg %>% mutate(Cluster = ifelse(is.na(cluster), "Unknown", cluster)) %>% mutate(Alpha = ifelse(Cluster == "Unknown", 0.8, 1))
 
@@ -129,17 +99,16 @@ bulk_deg <- bulk_deg %>% mutate(Cluster = ifelse(is.na(cluster), "Unknown", clus
 ```
 
 
-
+#DEG PLOT
 ```{r}
-
+#Plotting
 plot <- ggplot(bulk_deg, aes(x = logFC, y = -log10(adj.P.Val), color = Cluster, alpha = Alpha, label = Genes) ) + geom_point() + scale_color_manual(values = c("purple", "orange", "red", "pink", "darkgreen","navy" , "grey")) + geom_hline(yintercept = -log10(0.1), linetype= 'dashed') + geom_vline(xintercept = c(-1,1), linetype = 'dashed') + geom_text_repel(data = dplyr::filter(bulk_deg, abs(logFC) > 1 &adj.P.Val < 0.1 & Cluster != "Unknown"), force = 0.8, size = 2.5) + ggtitle(label = "Protein coding genes associated with bi-allelic RB1 loss") + theme_classic()
 plot
 ggsave(plot = plot, filename = "/Users/ds/Desktop/plot.pdf", width = 10)
 
+#Write to disk
 write.csv(x = bulk_deg, file = "/Users/ds/Desktop/Supplementary.Table5.csv",quote = F, row.names = F)
 
-plot
-bulk_deg %>% dplyr::filter(logFC >0 & cluster != "Unknown")
 ```
 
 
